--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -6,9 +6,34 @@ metadata:
     kubernetes.io/ingress.class: 'nginx'
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
+  tls:
+    - hosts:
+        - ajwatson.me
+        - www.ajwatson.me
+      secretName: ajwatson-me
   rules:
-    - http:
+    - host: ajwatson.me
+      http:
+        paths:
+          - path: /?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: client-cluster-ip-service
+                port:
+                  number: 3000
+          - path: /api/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: server-cluster-ip-service
+                port:
+                  number: 5000
+    - host: www.ajwatson.me
+      http:
         paths:
           - path: /?(.*)
             pathType: Prefix
